wnp: even more gameplay added...

--- a/app/walkandplay/trunk/server/test/cfg/test.properties
+++ b/app/walkandplay/trunk/server/test/cfg/test.properties
@@ -1,6 +1,6 @@
 # standard properties file
 # host=test.waag.org
-host=berlin
+host=127.0.0.1
 port=6050
 script.dir=../protocol
 result.dir=/var/keyworx/webapps/walkandplay/wptest/test/protocol
