--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MakePhotoPage.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MapHandler.cs" />
     <Compile Include="MediaHandler.cs" />
     <Compile Include="RouteInfoPage.cs">
       <SubType>Form</SubType>
@@ -138,6 +139,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\ploink.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\mypos.ico" />
   </ItemGroup>
   <Import Condition="'$(TargetFrameworkVersion)' == 'v1.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.v1.targets" />
   <Import Condition="'$(TargetFrameworkVersion)' == 'v2.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
