base: added javamail ext lib (+javabeans activation framework)

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -41,7 +41,15 @@ ehcache.dir=${geotracing.external.dir}/${ehcache}
 geotools-referencing=geotools-referencing-2.3.0
 geotools-referencing.dir=${geotracing.external.dir}/${geotools-referencing}
 
-# KeyWorx distro - provider: www.keyworx.org
+# JavaBeans activation framework - provider: Sun
+jaf=jaf-1.1
+jaf.dir=${geotracing.external.dir}/${jaf}
+
+# JavaMail - provider: Sun
+javamail=javamail-1.4
+javamail.dir=${geotracing.external.dir}/${javamail}
+
+## KeyWorx distro - provider: www.keyworx.org
 keyworx=keyworx-1.0.7rc9
 keyworx.dir=${geotracing.external.dir}/${keyworx}
 
