--- a/app/geosailing/trunk/svr2007/build.properties
+++ b/app/geosailing/trunk/svr2007/build.properties
@@ -6,7 +6,7 @@ project.id=svr
 version=1.0.0
 
 # specifiy the directory of the GeoTracing unpacked .war archive
-gt.war.dir=${basedir}/../../../base/trunk/server/build/war
+gt.war.dir=${basedir}/../../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
 deploy.local.dir=/var/keyworx/webapps/geosailing
