--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -62,6 +62,9 @@
     <Compile Include="MakePhotoPage.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MakeVideoPages.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MapHandler.cs" />
     <Compile Include="MediaHandler.cs" />
     <Compile Include="RouteInfoPage.cs">
