--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -21,9 +21,7 @@ keyworx.log.dir=/var/keyworx/log/diwi
 keyworx.log.level=INFO
 
 #Route generator REST URL
-diwi.routegenerator.url=http://local.diwi.nl/diwi/test.jsp
-kich.post.url=http://local.diwi.nl/diwi/kich.jsp
-kich.rest.url=http://local.diwi.nl/diwi/rest.jsp
-routing.servlet.url=http://www.groene-omgeving.nl:8080/diwirouting/RoutingServlet
+keyworx.mail.server=smtp1.waag.org
+keyworx.mail.recipient=ronald@waag.org
 
 
