--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -70,6 +70,9 @@
     </Compile>
     <Compile Include="MapHandler.cs" />
     <Compile Include="MediaHandler.cs" />
+    <Compile Include="PoiViewerPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="RouteInfoPage.cs">
       <SubType>Form</SubType>
     </Compile>
