--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -57,6 +57,8 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 	<property name="gt2-epsg-wkt.jar" value="${geotools-referencing.dir}/gt2-epsg-wkt-2.3.0.jar"/>
 	<property name="gt2-referencing.jar" value="${geotools-referencing.dir}/gt2-referencing-2.3.0.jar"/>
 	<property name="javax-units.jar" value="${geotools-referencing.dir}/jsr108-0.01.jar"/>
+	<property name="jaf.jar" value="${jaf.dir}/activation.jar"/>
+	<property name="javamail.jar" value="${javamail.dir}/mail.jar"/>
 
 	<!-- All sources to be compiled -->
 	<property name="server.src.path" value="${home.src.dir}"/>
@@ -85,6 +87,8 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 		<pathelement location="${geoapi.jar}"/>
 		<pathelement location="${gt2-epsg-wkt.jar}"/>
 		<pathelement location="${gt2-referencing.jar}"/>
+		<pathelement location="${jaf.jar}"/>
+		<pathelement location="${javamail.jar}"/>
 	</path>
 
 	<!-- Initialize: create dirs and set timestamp.. -->
@@ -128,9 +132,18 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 		<ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
 			<property name="package" value="${geotools-referencing}"/>
 		</ant>
- 	</target>
 
-	<!-- Compile the java files. -->
+        <ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
+			<property name="package" value="${jaf}"/>
+		</ant>
+
+		<ant antfile="${geotracing.external.dir}/build.xml" target="get-external" inheritall="false">
+			<property name="package" value="${javamail}"/>
+		</ant>
+
+     </target>
+
+    <!-- Compile the java files. -->
 	<target name="compile" depends="init,externals">
 		<echo message="Compiling java files..."/>
 
@@ -231,7 +244,17 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 			</fileset>
 		</copy>
 
-		<copy todir="${build.war.dir}/WEB-INF/classes">
+        <!-- Copy additional external libraries -->
+		<copy todir="${build.war.dir}/WEB-INF/lib" overwrite="true">
+			<fileset dir="${jaf.dir}">
+				<include name="activation.jar"/>
+			</fileset>
+			<fileset dir="${javamail.dir}">
+				<include name="mail.jar"/>
+			</fileset>
+		</copy>
+
+        <copy todir="${build.war.dir}/WEB-INF/classes">
 			<fileset dir="${home.cfg.dir}">
 				<include name="pushlet.properties"/>
 			</fileset>
