--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -21,7 +21,9 @@ keyworx.log.dir=/var/keyworx/log/diwi
 keyworx.log.level=INFO
 
 #Route generator REST URL
-keyworx.mail.server=smtp1.waag.org
+keyworx.mail.host=smtp1.waag.org
 keyworx.mail.recipient=ronald@waag.org
+keyworx.mail.user=[mail.username]
+keyworx.mail.password=[mail.password]
 
 
