--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -25,5 +25,6 @@ keyworx.mail.host=smtp1.waag.org
 keyworx.mail.recipient=ronald@waag.org
 keyworx.mail.user=[mail.username]
 keyworx.mail.password=[mail.password]
+keyworx.log.timeout=43200
 
 
