--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -73,6 +73,7 @@
     <Compile Include="PoiViewerPage.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Progress.cs" />
     <Compile Include="RouteInfoPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -154,6 +155,14 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\mypos.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\minil1.GIF">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\minil2.GIF" />
+    <EmbeddedResource Include="Resources\minil3.GIF" />
+    <EmbeddedResource Include="Resources\minil4.GIF" />
   </ItemGroup>
   <Import Condition="'$(TargetFrameworkVersion)' == 'v1.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.v1.targets" />
   <Import Condition="'$(TargetFrameworkVersion)' == 'v2.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
