--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -167,6 +167,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\click.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\UrlReq.gif" />
+  </ItemGroup>
   <Import Condition="'$(TargetFrameworkVersion)' == 'v1.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.v1.targets" />
   <Import Condition="'$(TargetFrameworkVersion)' == 'v2.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
