--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -264,7 +264,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
         <copy todir="${build.war.dir}/WEB-INF/cfg/tables" overwrite="true">
             <fileset dir="${geotracing.server.dir}/cfg/tables">
                 <include name="g_track.xml"/>
-                <include name="g_location.xml"/>
+                <!--<include name="g_location.xml"/>-->
                 <include name="g_area.xml"/>
             </fileset>
         </copy>
