--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -62,6 +62,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DiwiUIStaticText.cs" />
+    <Compile Include="ll.cs" />
     <Compile Include="MakePhotoPage.cs">
       <SubType>Form</SubType>
     </Compile>
