diwi: run mapserver locally

--- a/app/diwi/trunk/build.properties
+++ b/app/diwi/trunk/build.properties
@@ -5,7 +5,7 @@ project.name=diwi
 project.id=diwi
 project.version=0.0.1
 
-deploy.local.dir=/var/keyworx/webapps/local.diwi.nl
+deploy.local.dir=/var/keyworx/webapps/diwi
 deploy.test.server=keyworx@test.digitalewichelroede.nl
 deploy.test.dir=${deploy.test.server}:/var/keyworx/webapps/diwi
 
