--- a/app/diwi/trunk/server/test/protocol/test.properties
+++ b/app/diwi/trunk/server/test/protocol/test.properties
@@ -5,7 +5,7 @@ host=localhost
 # must match port in portal.xml for local test
 port=5515
 script.dir=script
-result.dir=/var/keyworx/webapps/local.diwi.nl/rsc/test
+result.dir=/var/keyworx/webapps/diwi/rsc/test
 #result.dir=/var/keyworx/webapps/diwi/rsc/test
 suite=script/suite.xml
 
