--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -50,7 +50,7 @@ javamail=javamail-1.4
 javamail.dir=${geotracing.external.dir}/${javamail}
 
 ## KeyWorx distro - provider: www.keyworx.org
-keyworx=keyworx-1.0.7
+keyworx=keyworx-1.0.8rc1
 keyworx.dir=${geotracing.external.dir}/${keyworx}
 
 # KeyWorx tagging plugin - provider: www.keyworx.org
