--- a/app/diwi/trunk/server/cfg/server.properties
+++ b/app/diwi/trunk/server/cfg/server.properties
@@ -13,18 +13,18 @@ keyworx.backup.dir=/var/keyworx/backup
 #
 
 # absolute log dir (default /var/keyworx/log)
-keyworx.log.dir=/var/keyworx/log/diwi
+keyworx.log.dir=$[keyworx.log.dir]
 
 # Level as defined in java.util.Logging
 # e.g. SEVERE, WARNING, INFO, FINE etc
 # default: INFO
-keyworx.log.level=INFO
+keyworx.log.level=$[keyworx.log.level]
 
 #Route generator REST URL
-keyworx.mail.host=smtp1.waag.org
-keyworx.mail.recipient=ronald@waag.org
-keyworx.mail.user=[mail.username]
-keyworx.mail.password=[mail.password]
+mail.host=$[mail.host]
+mail.recipient=$[mail.recipient]
+mail.user=$[mail.username]
+mail.password=$[mail.password]
 keyworx.log.timeout=43200
 
 
