live and test config added

--- a/app/diwi/trunk/server/build.properties
+++ b/app/diwi/trunk/server/build.properties
@@ -3,7 +3,7 @@
 # your PATH must point to the bin where the Jikes compiler is
 build.compiler=jikes
 
-war.name=diwi
+# war.name=diwi
 # deploy.live.dir=/Volumes/homes/httpd/diwi.nl
 
 
