--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -26,6 +26,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
     <property name="keyworx.server.cfg" value="${server.dir}/cfg/utopia"/>
 
     <property file="../build.properties"/>
+    <property name="build.properties" value="../build.test.properties" />
     <property file="build.properties"/>
 
     <!-- Java compiler options -->
@@ -72,7 +73,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 
     <!-- The .jar -->
     <property name="project.jar" value="${build.lib.dir}/${project.id}.jar"/>
-    <property name="project.war" value="${build.dir}/${war.name}.war"/>
+    <property name="project.war" value="${build.dir}/${project.name}.war"/>
     <property name="package.zip" value="${dist.dir}/${project.id}-${project.version}.zip"/>
     <property name="packagewar.zip" value="${dist.dir}/${project.id}-war-${project.version}.zip"/>
 
@@ -200,7 +201,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
         <mkdir dir="${build.war.dir}"/>
 
         <copy todir="${build.war.dir}">
-            <fileset dir="${home.webapp.dir}/${war.name}"/>
+            <fileset dir="${home.webapp.dir}/${project.name}"/>
         </copy>
 
         <!-- First assemble all required files into war directory. -->
@@ -293,7 +294,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 
         <!-- Set version numbers and build info in version/index.html. -->
         <concat destfile="${build.war.dir}/version/index.html">
-            <filelist dir="${home.webapp.dir}/${war.name}/version" files="index.html"/>
+            <filelist dir="${home.webapp.dir}/${project.name}/version" files="index.html"/>
             <filterchain>
                 <expandproperties/>
             </filterchain>
@@ -384,14 +385,14 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
     </target>
 
     <target name="deploy-local" depends="war">
-        <copy file="${project.war}" todir="${deploy.local.dir}" overwrite="true"/>
+        <copy file="${project.war}" todir="${deploy.local.dir}/${portal.name}" overwrite="true"/>
     </target>
 
     <target name="deploy-local-raw">
-        <copy todir="${deploy.local.dir}/${war.name}" overwrite="true">
-            <fileset dir="${home.webapp.dir}/${war.name}"/>
+        <copy todir="${deploy.local.dir}/${portal.name}" overwrite="true">
+            <fileset dir="${home.webapp.dir}/${project.name}"/>
         </copy>
-        <copy todir="${deploy.local.dir}/${war.name}/lib" overwrite="true">
+        <copy todir="${deploy.local.dir}/${portal.name}/lib" overwrite="true">
             <fileset dir="${pushlet.dir}/webapps/pushlet/lib">
                 <include name="ajax-pushlet-client.js"/>
             </fileset>
@@ -412,7 +413,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
         <mkdir dir="${build.doc.dir}/jsdoc"/>
         <exec executable="${jsdoc}">
             <arg line="-d ${build.doc.dir}/jsdoc"/>
-            <arg line="${home.webapp.dir}/${war.name}/lib"/>
+            <arg line="${home.webapp.dir}/${project.name}/lib"/>
         </exec>
     </target>
 
