--- a/app/diwi/trunk/server/runtime.test.properties
+++ b/app/diwi/trunk/server/runtime.test.properties
@@ -12,7 +12,7 @@ portal.name=diwitest
 # Log level as defined in java.util.Logging
 # e.g. SEVERE, WARNING, INFO, FINE etc
 # Is copied to server.properties
-keyworx.log.level=WARNING
+keyworx.log.level=FINE
 
 keyworx.log.dir=/var/keyworx/log/diwitest
 
