--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -16,7 +16,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 
     <property file="${keyworx.dir}/build.properties"/>
 
-    <property name="runtime.properties" value="runtime.test.properties" />
+    <property name="runtime.properties" value="runtime.live.properties" />
     <property file="${runtime.properties}" />
 
     <property name="security.properties" value="security.properties" />
