--- a/app/diwi/trunk/server/runtime.test.properties
+++ b/app/diwi/trunk/server/runtime.test.properties
@@ -22,6 +22,6 @@ tcpconnector.port=5516
 siteurl.name=http://test.digitalewichelroede.nl
 webappurl.name=http://test.digitalewichelroede.nl/diwi
 
-kichservleturl.name=
-routingservleturl.name=
+kichservleturl.name=http://diwi.alterra.nl/diwirouting/POIServlet
+routingservleturl.name=http://diwi.alterra.nl/diwirouting/RoutingServlet
 mediaurl.name=
