--- a/app/diwi/trunk/server/runtime.live.properties
+++ b/app/diwi/trunk/server/runtime.live.properties
@@ -12,7 +12,7 @@ portal.name=diwi
 # Log level as defined in java.util.Logging
 # e.g. SEVERE, WARNING, INFO, FINE etc
 # Is copied to server.properties
-keyworx.log.level=WARNING
+keyworx.log.level=INFO
 
 keyworx.log.dir=/var/keyworx/log/diwi
 
