--- a/app/diwi/trunk/build.properties
+++ b/app/diwi/trunk/build.properties
@@ -6,7 +6,7 @@ project.id=diwi
 project.version=0.0.1
 
 deploy.local.dir=/var/keyworx/webapps
-deploy.live.server=keyworx@test.digitalewichelroede.nl
+deploy.live.server=keyworx@www.digitalewichelroede.nl
 deploy.live.dir=${deploy.live.server}:/var/keyworx/webapps/diwi
 deploy.test.server=keyworx@test.digitalewichelroede.nl
 deploy.test.dir=${deploy.test.server}:/var/keyworx/webapps/diwitest
