--- a/app/diwi/trunk/server/security.properties.template
+++ b/app/diwi/trunk/server/security.properties.template
@@ -1,2 +1,4 @@
-[mail.username]=fill_in_username
-[mail.password]=fill_in_password
+mail.host=fill_in
+mail.recipient=fill_in
+mail.username=fill_in
+mail.password=fill_in
