base: added jsr179 to external libs

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -45,6 +45,10 @@ geotools-referencing.dir=${geotracing.external.dir}/${geotools-referencing}
 jaf=jaf-1.1
 jaf.dir=${geotracing.external.dir}/${jaf}
 
+# JSR-179 Location API - provider: Sun
+jsr179=jsr179
+jsr179.dir=${geotracing.external.dir}/${jsr179}
+
 # JavaMail - provider: Sun
 javamail=javamail-1.4
 javamail.dir=${geotracing.external.dir}/${javamail}
